@@ -1,21 +1,13 @@
 import com.jmc.lang.ref.Pointer;
-import com.test.native_invoke.Switch;
 import org.junit.Assert;
 
-import java.lang.foreign.*;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.stream.Stream;
 
-
-@SuppressWarnings("preview")
 void main() {
     // strlen
     var s = "hello";
     long len = strlen(s);
 
-    System.out.println(STR."strlen -> 字符串「\{s}」的长度是：\{len}");
+    System.out.println("strlen -> 字符串「" + s + "」的长度是：" + len);
     Assert.assertEquals(5L, len);
 
     // scanf
@@ -24,7 +16,7 @@ void main() {
     // 这里不使用c printf，因为有缓冲区刷新问题，无法调用fflush方法
     System.out.print("scanf -> 请输入你的姓名和年龄，用空格隔开：");
     int scanLen = scanf("%s %d", namePtr, agePtr);
-    System.out.println(STR."你输入的姓名是：\{namePtr.get()}；年龄是：\{agePtr.get()}\n");
+    System.out.println("你输入的姓名是：" + namePtr.get() + "；年龄是：" + agePtr.get() + "\n");
 
     Assert.assertEquals(2, scanLen);
 
@@ -42,7 +34,6 @@ void main() {
  * @param vargs 参数列表
  * @return 打印的字符串长度
  */
-@SuppressWarnings("preview")
 static int printf(String format, Object... vargs) {
     // 函数名
     var funcName = "printf";
@@ -54,17 +45,18 @@ static int printf(String format, Object... vargs) {
     var argTypeList = new ArrayList<MemoryLayout>(List.of(ValueLayout.ADDRESS));
     // 依次填充可变参数对应的类型
     Arrays.stream(vargs).forEach(arg -> {
-        MemoryLayout argType = Switch.match(arg.getClass())
-                .when(Byte.class, ValueLayout.JAVA_BYTE)
-                .when(Boolean.class, ValueLayout.JAVA_BOOLEAN)
-                .when(Character.class, ValueLayout.JAVA_CHAR)
-                .when(Short.class, ValueLayout.JAVA_SHORT)
-                .when(Integer.class, ValueLayout.JAVA_INT)
-                .when(Long.class, ValueLayout.JAVA_LONG)
-                .when(Float.class, ValueLayout.JAVA_FLOAT)
-                .when(Double.class, ValueLayout.JAVA_DOUBLE)
-                .when(String.class, ValueLayout.ADDRESS)
-                .orElseThrow(() -> new IllegalStateException(STR."不支持的参数类型：\{arg.getClass()}"));
+        MemoryLayout argType = switch (arg) {
+            case Byte _ -> ValueLayout.JAVA_BYTE;
+            case Boolean _ -> ValueLayout.JAVA_BOOLEAN;
+            case Character _ -> ValueLayout.JAVA_CHAR;
+            case Short _ -> ValueLayout.JAVA_SHORT;
+            case Integer _ -> ValueLayout.JAVA_INT;
+            case Long _ -> ValueLayout.JAVA_LONG;
+            case Float _ -> ValueLayout.JAVA_FLOAT;
+            case Double _ -> ValueLayout.JAVA_DOUBLE;
+            case String _ -> ValueLayout.ADDRESS;
+            default -> throw new IllegalStateException("不支持的参数类型：" + arg.getClass());
+        };
         argTypeList.add(argType);
     });
 
@@ -83,14 +75,14 @@ static int printf(String format, Object... vargs) {
     // 管理内存分配，在try结束后自动释放内存
     try (var arena = Arena.ofConfined()) {
         // 分配内存，并生成一个C字符串为format参数
-        var formatArg = arena.allocateUtf8String(format);
+        var formatArg = arena.allocateFrom(format);
 
         // 参数列表
         var argList = Stream.concat(Stream.of(formatArg), Arrays.stream(vargs))
                 .map(arg -> {
                     // 把所有String转化为c_string
                     if (arg instanceof String s) {
-                        return arena.allocateUtf8String(s);
+                        return arena.allocateFrom(s);
                     }
                     return arg;
                 })
@@ -109,7 +101,6 @@ static int printf(String format, Object... vargs) {
  * @param vargs 输入参数的指针列表
  * @return 打印的字符串长度
  */
-@SuppressWarnings("preview")
 static int scanf(String format, Pointer<?>... vargs) {
     // 函数名
     var funcName = "scanf";
@@ -137,11 +128,11 @@ static int scanf(String format, Pointer<?>... vargs) {
     // 管理内存分配，在try结束后自动释放内存
     try (var arena = Arena.ofConfined()) {
         // 分配内存，并生成一个C字符串为format参数
-        var formatArg = arena.allocateUtf8String(format);
+        var formatArg = arena.allocateFrom(format);
 
         // 参数指针列表（每个参数初始化值都设置为-1）
         var argAddrList = Arrays.stream(vargs)
-                .map(_ -> arena.allocate(ValueLayout.ADDRESS, MemorySegment.ofAddress(-1)))
+                .map(_ -> arena.allocate(ValueLayout.ADDRESS))
                 .toList();
 
         // 参数列表
@@ -158,17 +149,18 @@ static int scanf(String format, Pointer<?>... vargs) {
             var argPtr = vargs[idx];
 
             // 读取指针，从参数指针的最开始获取参数值
-            Object value = Switch.match(argPtr.type())
-                    .when(Byte.class, () -> argAddr.get(ValueLayout.JAVA_BYTE, 0))
-                    .when(Boolean.class, () -> argAddr.get(ValueLayout.JAVA_BOOLEAN, 0))
-                    .when(Character.class, () -> argAddr.get(ValueLayout.JAVA_CHAR, 0))
-                    .when(Short.class, () -> argAddr.get(ValueLayout.JAVA_SHORT, 0))
-                    .when(Integer.class, () -> argAddr.get(ValueLayout.JAVA_INT, 0))
-                    .when(Long.class, () -> argAddr.get(ValueLayout.JAVA_LONG, 0))
-                    .when(Float.class, () -> argAddr.get(ValueLayout.JAVA_FLOAT, 0))
-                    .when(Double.class, () -> argAddr.get(ValueLayout.JAVA_DOUBLE, 0))
-                    .when(String.class, () -> argAddr.getUtf8String(0))
-                    .orElseThrow(() -> new IllegalStateException(STR."不支持的指针类型：\{argPtr.type()}"));
+            Object value = switch (argPtr.type()) {
+                case Class<?> c when c == Byte.class -> argAddr.get(ValueLayout.JAVA_BYTE, 0);
+                case Class<?> c when c == Boolean.class -> argAddr.get(ValueLayout.JAVA_BOOLEAN, 0);
+                case Class<?> c when c == Character.class -> argAddr.get(ValueLayout.JAVA_CHAR, 0);
+                case Class<?> c when c == Short.class -> argAddr.get(ValueLayout.JAVA_SHORT, 0);
+                case Class<?> c when c == Integer.class -> argAddr.get(ValueLayout.JAVA_INT, 0);
+                case Class<?> c when c == Long.class -> argAddr.get(ValueLayout.JAVA_LONG, 0);
+                case Class<?> c when c == Float.class -> argAddr.get(ValueLayout.JAVA_FLOAT, 0);
+                case Class<?> c when c == Double.class -> argAddr.get(ValueLayout.JAVA_DOUBLE, 0);
+                case Class<?> c when c == String.class -> argAddr.getString(0, java.nio.charset.StandardCharsets.UTF_8);
+                default -> throw new IllegalStateException("不支持的指针类型：" + argPtr.type());
+            };
             // 把参数值设置回Java指针中
             argPtr.resetUnchecked(value);
         }
@@ -184,7 +176,6 @@ static int scanf(String format, Pointer<?>... vargs) {
  * @param s 字符串s
  * @return C字符串长度
  */
-@SuppressWarnings("preview")
 static long strlen(String s) {
     // 函数名
     var funcName = "strlen";
@@ -202,7 +193,7 @@ static long strlen(String s) {
     // 管理内存分配，在try结束后自动释放内存
     try (var arena = Arena.ofConfined()) {
         // 分配内存，并生成一个C字符串为函数参数
-        var cStr = arena.allocateUtf8String(s);
+        var cStr = arena.allocateFrom(s);
         // 执行函数，返回结果
         return (long) strlen.invokeExact(cStr);
     } catch (Throwable e) {
